[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Graphics/Single_Textures/lake.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sound/Ambient/lake_ambience.ogg" type="AudioStream" id=2]
[ext_resource path="res://lake.gd" type="Script" id=3]

[node name="Lake" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
bus = "Ambient"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
